--- a/css/estilos.css
+++ b/css/estilos.css
@@ -196,103 +196,83 @@ img{
 
 */
 
-/*CHATS DE IPHONE*/
+/*ESTILOS HOVER UI*/
 
-.iphone {
-    font-family: helvetica;
-    display: flex ;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .chat {
-    width: 300px;
-    border: solid 1px #EEE;
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-  }
-  
-  .messages {
-    margin-top: 30px;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .message {
-    border-radius: 20px;
-    padding: 8px 15px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    display: inline-block;
-  }
-  
-  .yours {
-    align-items: flex-start;
-  }
-  
-  .yours .message {
-    margin-right: 25%;
-    background-color: #eee;
+.boton{
+    border: 1px solid #3498db;
+    background: none;
+    padding: 10px 20px;
+    font-size: 20px;
+    font-family: sans-serif;
+    cursor: pointer;
+    margin: 10px;
+    transition: 0.8s;
     position: relative;
-  }
-  
-  .yours .message.last:before {
+    overflow: hidden;
+}
+
+.btn1, .btn2{
+    color: #3498db;
+}
+
+.btn3, .btn4{
+    color: #fff;
+}
+
+.btn1:hover, .btn2:hover{
+    color: #fff;
+}
+.btn3:hover, .btn4:hover{
+    color: #3498db;
+}
+
+.boton::before{
     content: "";
     position: absolute;
-    z-index: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    background: #3498db;
+    z-index: -1;
+    transition: 0.8s;
+}
+
+.btn1::before, .btn3::before{
+    top: 0;
+    border-radius: 0 0 50% 50%;
+}
+
+.btn2::before, .btn4::before{
     bottom: 0;
-    left: -7px;
-    height: 20px;
-    width: 20px;
-    background: #eee;
-    border-bottom-right-radius: 15px;
-  }
-  .yours .message.last:after {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    bottom: 0;
-    left: -10px;
-    width: 10px;
-    height: 20px;
-    background: white;
-    border-bottom-right-radius: 10px;
-  }
-  
-  .mine {
-    align-items: flex-end;
-  }
-  
-  .mine .message {
-    color: white;
-    margin-left: 25%;
-    background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
-    background-attachment: fixed;
-    position: relative;
-  }
-  
-  .mine .message.last:before {
-    content: "";
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
-    right: -8px;
-    height: 20px;
-    width: 20px;
-    background: linear-gradient(to bottom, #00D0EA 0%, #0085D1 100%);
-    background-attachment: fixed;
-    border-bottom-left-radius: 15px;
-  }
-  
-  .mine .message.last:after {
-    content: "";
-    position: absolute;
-    z-index: 1;
-    bottom: 0;
-    right: -10px;
-    width: 10px;
-    height: 20px;
-    background: white;
-    border-bottom-left-radius: 10px;
-  }
+    border-radius: 50% 50% 0 0;
+}
+
+.btn3::before, .btn4::before{
+    height: 180%;
+}
+
+.btn1:hover::before,.btn2:hover::before{
+    height: 180%;
+}
+
+.btn3:hover::before,.btn4:hover::before{
+    height: 0%;
+}
+
+.login{
+    background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+}
+
+.opacar{
+    opacity: .5;
+}
+
+
+.card-mover:hover{
+    transform: translateY(-10px);
+    transition: 0.50s;
+}
+
+.card-hover:hover{
+    background-color: rgba(82, 70, 245, 0.1);
+}
